# random-function-tester

./: CMakeLists.txt  README.md
src/geometry/: CMakeLists.txt  area.cc  area.hh  perimeter.cc  perimeter.hh  polygon.cc  polygon.hh  rectangle.cc  rectangle.hh  shapes.cc  shapes.hh  square.cc  square.hh  triangle.cc  triangle.hh
src/math/: CMakeLists.txt  derivative.cc  derivative.hh  factorial.cc  factorial.hh  gamma.cc  gamma.hh  integral.cc  integral.hh  math.cc  math.hh
src/operations/: CMakeLists.txt  add.cc  add.hh  operations.cc  operations.hh  sqrt.cc  sqrt.hh  trig.cc  trig.hh
test/: CMakeLists.txt  a.out  area.cc  run.sh
test/geometry/: CMakeLists.txt  geometry_test.cc  run.sh
test/math/: CMakeLists.txt  math_tests.cc  run.sh
test/operations/: CMakeLists.txt  operations_test.cc  run.sh
