# add_library(area SHARED area.cc)
# add_library(perimeter SHARED perimeter.cc )
# add_library(rectangle SHARED rectangle.cc )
# add_library(polygon SHARED polygon.cc)
# add_library(shapes SHARED shapes.cc)
# add_library(triangle SHARED triangle.cc)
# add_library(square SHARED square.cc)
add_library(geometry_libs SHARED square.cc triangle.cc shapes.cc polygon.cc rectangle.cc perimeter.cc area.cc)
# target_include_directories( PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
# target_include_directories(polygon PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
# target_include_directories(shapes PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
# target_include_directories(triangle PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
# target_include_directories(area PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
# target_include_directories(perimeter PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
# target_include_directories(rectangle PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})