add_library(derivative SHARED derivative.cc)
add_library(gamma SHARED gamma.cc)
add_library(factorial SHARED factorial.cc)
add_library(integral SHARED factorial.cc)
add_library(math SHARED math.cc)
target_include_directories(gamma PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(factorial PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(derivative PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(integral PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(math PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})